--- a/FinalProject/happyPlace.html
+++ b/FinalProject/happyPlace.html
@@ -18,8 +18,9 @@
 <body>
     <div id="wrapper">
 
-        <header>
-            <h1>Cole Petrie</h1>
+        <header>            
+            <a href="mailto: happyplacenormal@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a>
+            <a href="https://www.instagram.com/happyplace_blono/" target="_blank"><i class="bi bi-instagram"></i></a>            <h1>Cole Petrie</h1>
         </header>
 
 
@@ -34,15 +35,14 @@
         </nav>
 
         <main>
-            <h2>Happy Place</h2>
+            <h2><span class="top">Happy Place</span></h2>
 
             <iframe width="97%" height="350" class="Video" src="https://www.youtube.com/embed/MFl17PZ2EoY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video"></iframe>
 
-            <p>The Happy Place is one of Noraml's local house DIY venues where our main goal is to bring artists and bands to the ISU campus at an affordable cost. We have been lucky enough to host a ton of local bands, as well as hearing acts from Iowa, Wisconsin, and Chicago. We strive to provide a fun accepting environment for students who enjoy live music.</p>
+            <p class="description">The Happy Place is one of Normal's local house DIY venues, where our main goal is to bring artists and bands to the ISU campus at an affordable cost for students. We have been lucky enough to host a ton of local bands this semester, as well as hearing acts from Iowa and Chicago. We strive to provide a fun accepting environment for all parties who enjoy live music.</p>
 
        </main>
         <footer>
-            <i class="bi bi-instagram"></i>
             <p>Happy Place Productions</p>
         </footer>
 
