--- a/FinalProject/mulch.html
+++ b/FinalProject/mulch.html
@@ -13,13 +13,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+    <!-- Links and script in <head> -->
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.umd.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css" /> 
 </head>
 
 <body>
     <div id="wrapper">
 
         <header>
-            <h1>Cole Petrie</h1>
+            <a href="mailto: clpetrie8@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a>
+            <a href="https://www.instagram.com/mulch.music/" target="_blank"><i class="bi bi-instagram"></i></a>            <h1>Cole Petrie</h1>
         </header>
 
 
@@ -34,14 +38,20 @@
         </nav>
 
         <main>
-            <h2>Mulch</h2>
+            <h2><span class="top">Mulch</span></h2>
 
-            <img src="mulchband.jpg" alt="Mulch band" width="97%" height="450px">
+            <img src="mulchband.jpg" alt="Mulch band" width="100%" >
 
-            <p>Mulch is a local band who recently got their start earlier this semester. Beginning as an acoustic duo, the band has since grown into a full rockband drawing inspiriations from a variety of alternative rock music across the decades.</p>
+
+            <p>&nbsp&nbsp&nbsp&nbsp&nbspMulch is a local ISU band who recently got their start earlier this semester. Beginning as an acoustic duo, the band has since progressed into a full rock band, drawing inspiriations from a variety of alternative rock music like TOOL, Led Zepplin, Seether, Blind Melon, and many more. Mulch has played all over Illinois State University including a variety of house venues and the Coffeehouse. We will soon be hitting the road to other cities in the near future.
+
+                <audio controls autobuffer autoplay >
+                    <source src="wave.mp3" type="audio/mpeg">
+                  </audio>
+            </p>
+
        </main>
         <footer>
-            <i class="bi bi-instagram"></i>
             <p>Happy Place Productions</p>
         </footer>
 
