--- a/FinalProject/contact.html
+++ b/FinalProject/contact.html
@@ -19,6 +19,8 @@
     <div id="wrapper">
 
         <header>
+            <a href="mailto: clpetrie8@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a>
+            <a href="https://www.instagram.com/colepetrie_/" target="_blank"><i class="bi bi-instagram"></i></a>
             <h1>Cole Petrie</h1>
         </header>
 
@@ -34,14 +36,30 @@
 
         <main>
 
-            <h2>Contact</h2>
+           <h2>Contact Me</h2>
 
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSegkkSObjNkvcws8cm805RcbjR_pS7N4pvunMBdca_q4V9phg/viewform?embedded=true" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <!-- modify this form HTML and place wherever you want your form -->
+            <form action="https://formspree.io/f/mrgvdgdk"method="POST">
+            <label>
+            Name:
+            <br><input type="name" name="name">
+            </label><br>
+            <label>
+            Email:
+            <br><input type="email" name="email">
+            </label><br>
+            <label>
+            Message:
+            <br><textarea name="message"></textarea>
+            </label><br> 
+            <br> <button type="submit">Send</button>
+            </form>
+
+            <img src="pirate.jpg" alt="Mulch band" width="100%" >
      
        </main>
         <footer>
-            <i class="bi bi-instagram"></i>
-            <p>Copyright Happy Place</p>
+            <p>Happy Place Productions</p>
         </footer>
 
     </div>
